\title{Windows-specific changes to R}
\encoding{UTF-8}

\section{CHANGES IN R-devel}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \command{R CMD INSTALL} for a package with compiled code
      will fail if compilation fails for any of the installed
      sub-architectures: use \option{--no-multiarch} to override this.

      \item \code{postscript(file = "|cmd")} now works on Windows.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The preferred toolchain has changed since the one used for
      \R 2.12.0 to 2.14.x: see the\sQuote{R Installation and Administration
	manual}.  Compiled code (except DLLs) may be incompatible with
      previous toolchains (and compiled C++ code almost certainly will be).
    }
  }
}

\section{CHANGES IN R VERSION 2.14.0 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{Save as} menu item on the script
      editor adds extension \file{.R} to a file name without an extension.

      \item In package \pkg{parallel}, \code{detectCores(logical =
	FALSE)} makes an OS-dependent attempt to find the number of
      physical cores.  It usually succeeds, even on XP.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The directory pointed to by \env{USER_LOCAL} can now have
      architecture-specific sub-directories \file{lib/i386} and
      \file{lib/x64}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item The fix for \PR{14543} caused stack problems with outputing
      large \R objects (e.g. data frames of 25,000 items).  (\PR{14698})

      \item In a double-byte locale (Chinese, Japanese, Korean),
      \code{grep()} and friends might have used byte-wise matching of
      strings in the native encoding.  (\PR{14622})
    }
  }
}

\section{CHANGES IN R VERSION 2.14.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{yLineBias} of the \code{windows()} family of