@@ -28,7 +28,9 @@ dev2bitmap <- function(file, type="png16m", height = 7, width = 7, res = 72,
     gsexe <- Sys.getenv("R_GSCMD")
     if(!nzchar(gsexe)) gsexe <- Sys.getenv("GSC")
     if(is.null(gsexe) || !nzchar(gsexe)) {
-        gsexe <- "gswin32c.exe"
+        poss <- Sys.which(c("gswin64c.exe", "gswin32c.exe"))
+        poss <- poss[nzchar(poss)]
+        gsexe <- if(length(poss)) poss else "gswin32c.exe"
     } else if(length(grep(" ", gsexe, fixed=TRUE))> 0)
         gsexe <- shortPathName(gsexe)
     gshelp <- system(paste(gsexe, "-help"), intern=TRUE, invisible=TRUE)
@@ -88,7 +90,9 @@ bitmap <- function(file, type="png16m", height = 7, width = 7, res = 72,
     gsexe <- Sys.getenv("R_GSCMD")
     if(!nzchar(gsexe)) gsexe <- Sys.getenv("GSC")
     if(is.null(gsexe) || !nzchar(gsexe)) {
-        gsexe <- "gswin32c.exe"
+        poss <- Sys.which(c("gswin64c.exe", "gswin32c.exe"))
+        poss <- poss[nzchar(poss)]
+        gsexe <- if(length(poss)) poss else "gswin32c.exe"
     } else if(length(grep(" ", gsexe, fixed=TRUE))> 0)
         gsexe <- shortPathName(gsexe)
     gshelp <- system(paste(gsexe, "-help"), intern=TRUE, invisible=TRUE)
